--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
+"homepage": "https://suarezluis.github.io/image-equalizer",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
